Fix start screens, loading advancement